Algunos retoques y promedios en las cards de los apuntes

--- a/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
@@ -27,8 +27,8 @@
             </div>
         </div>
         <hr>
-        <h3>Reseñas</h3>
-        <h4>Promedio de reseñas: <span th:text="${promedioDeResenas}"></span></h4>
+        <h3>Reseñas <i class="fa-solid fa-star" style="color: #e7e00d;"></i> <span th:text="${promedioDeResenas}"></span></h3>
+        <h4></h4>
         <div class="container w-100 mb-2" id="containerResenas">
             <div class="row">
                 <div class="col-8">
