Promedio reseñas en home

--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -60,6 +60,10 @@
                 <p class="card-apunte-coins">
                     <img alt="coins" style="height: 32px" th:src="@{/img/coin.png}"><span id="apunte-precio"></span> <!-- apunte.precio -->
                 </p>
+                <p class="d-inline-block card-apunte-promedio">
+                    <i class="fa-solid fa-star" style="color: #e7e00d; margin-right: 5px; font-size: 1.5em;"></i>
+                    <span id="apunte-promedio"></span>
+                </p>
             </div>
         </div>
     </div>
