--- a/src/main/webapp/WEB-INF/views/thymeleaf/nav.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/nav.html
@@ -79,7 +79,7 @@
                             <img alt="Packs" style="height: 32px" th:src="@{/img/coin.png}">
                         </a>
                     </ul>
-                    <ul>
+                    <ul class="text-center">
                         <span class="small" th:text="${session.usuario.puntos}"></span>
                     </ul>
                 </li>
