--- a/src/main/webapp/WEB-INF/views/thymeleaf/packs.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/packs.html
@@ -37,7 +37,7 @@
                     </div>
                 </div>
             </fieldset>
-            <div class="text-center"><button type="submit" class="btn btn-primary my-4">Comprar Pack</button></div>
+            <div class="text-center"><button type="submit" class="btn bg-verde-unlam my-4">Comprar Pack</button></div>
         </form>
         <p th:text="${error}"></p>
     </div>
