--- a/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
@@ -78,8 +78,26 @@
             </form>
         </div>
 
-        <p th:if="${mensaje}" style="color: green;" th:text="${mensaje}"></p>
-        <p id="error" style="color: red;"></p>
+        <div th:if="${mostrarModalPuntos}" class="modal show" id="modalPuntos" tabindex="-1" role="dialog" aria-labelledby="modalPuntosLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="modalPuntosLabel">¡Ups!</h5>
+                        <button type="button" id="cerrarModalPuntosBtn" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Parece que no tenés puntos suficientes para comprar este apunte.<br>
+                            Pero tranquilo... Tenemos la solución a tus problemas! &#128522;</p><br>
+                        <p>¡Adquirí alguno de nuestros packs y seguí comprando!</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a th:href="@{'/packs'}" class="btn btn-success" data-dismiss="modal">Comprar packs</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 <footer class="text-light text-center py-3 footer">
@@ -146,4 +164,18 @@
             });
         });
     });
+    document.addEventListener('DOMContentLoaded', function() {
+
+        var mostrarModal = [[${mostrarModalPuntos}]];
+
+        if (mostrarModal) {
+            $('#modalPuntos').modal('show');
+        }
+    });
+    document.getElementById('cerrarModalPuntosBtn').addEventListener('click', function() {
+        cerrarModalPuntos();
+    });
+    function cerrarModalPuntos() {
+        $('#modalPuntos').modal('hide');
+    }
 </script>
