Materia en la vista de apunte detalle

--- a/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
@@ -12,6 +12,7 @@
             </div>
             <div class="col-12 col-md-3">
                 <h2 th:text="${apunte.nombre}"></h2>
+                <h3 th:text="${materia.descripcion}"></h3>
                 <p class="fw-bold">Descripción: <span class="fw-normal" th:text="${apunte.descripcion}"></span></p>
                 <p class="fw-bold">Nombre de documento: <span class="fw-normal" th:text="${apunte.pathArchivo}"></span></p>
 
