--- a/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
@@ -63,13 +63,7 @@
                     <span><i class="fa fa-copy"></i></span>
                 </div>
                 <div class="d-flex flex-row justify-content-center align-items-center mt-3">
-                    <span class="number">10 <span class="follow">Apuntes</span></span>
-                </div>
-                <div class=" d-flex mt-2">
-                    <button class="btn1 btn-dark">Edit Profile</button>
-                </div>
-                <div class="text mt-3">
-                    <span>Acá podría ir una descripción tranquilamente, o lo que consideren necesario.</span>
+                    <span th:text="${'Apuntes: ' + cantidadApuntesUsuario}"></span>
                 </div>
                 <div class="col-12 col-md-12 col-lg-12 mt-3 mx-auto">
                     <div id="map" class="w-100 rounded-lg border border-2 border-primary shadow-lg" style="height: 350px;"></div>
