--- a/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+
     <title>Crear cuenta</title>
-    
+
     <!-- Boostrap core css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- custom style -->
@@ -19,23 +19,15 @@
     <!-- custom scripts -->
     <script th:src="@{/js/main.js}"></script>
     <script th:src="@{/js/nuevo-usuario.js}"></script>
-
 </head>
-<style>
+<body class="bg-light" th:style="'background-image: url(' + @{/img/register.webp} + '); background-size: cover;'">
 
-  #map {
-    width: 100%;
-    height: 250PX;
-  }
-</style>
-
-<body>
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-md-6 mb-4">
+    <div class="col-md-8 my-4">
       <form action="#" th:action="@{/registrarme}" method="POST" th:object="${datosRegistro}" accept-charset="UTF-8"
-            enctype="multipart/form-data">
-        <h3 class="text-center mt-5 p-10">Crear cuenta</h3>
+            enctype="multipart/form-data" class="p-4 bg-white rounded shadow bg-opacity-75">
+        <h3 class="text-center mb-4">Crear cuenta</h3>
         <hr class="my-4">
 
         <div class="mb-3">
@@ -70,14 +62,10 @@
 
         <div class="mb-3">
           <label for="autocomplete" class="form-label">Dirección</label>
-          <input class="form-control"
-                 id="autocomplete" name="autocomplete"
-                 placeholder="Ingrese su dirección"
-
+          <input class="form-control" id="autocomplete" name="autocomplete" placeholder="Ingrese su dirección"
                  onFocus="geolocate()" type="text" required/>
-
-          <input th:field="*{latitud} "type="hidden" id="latitud" class="form-control" value="">
-          <input th:field="*{longitud} "type="hidden" id="longitud" class="form-control" value="">
+          <input th:field="*{latitud}" type="hidden" id="latitud" class="form-control" value="">
+          <input th:field="*{longitud}" type="hidden" id="longitud" class="form-control" value="">
 
           <div th:if="${#fields.hasErrors('latitud')}" class="text-danger">
             <p th:errors="*{latitud}"></p>
@@ -85,7 +73,7 @@
         </div>
 
         <div class="mb-3">
-          <div id="map"></div>
+          <div id="map" class="mb-3" style="height: 200px;"></div>
         </div>
 
         <div class="mb-3">
@@ -105,12 +93,9 @@
         </div>
         <div class="mt-4 d-flex justify-content-between">
           <button id="btn-registrarme" type="submit" class="btn btn-primary btn-block">Registrarme</button>
-          <a th:href="@{/login}">
-            <button type="button" class="btn btn-secondary btn-block">
-              Volver
-            </button>
-          </a>
+          <a th:href="@{/login}" class="btn btn-secondary btn-block">Volver</a>
         </div>
+
         <div th:if="${error != null}" class="alert alert-danger mt-3">
           <p th:text="'Error: ' + ${error}"></p>
         </div>
