--- a/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
@@ -78,6 +78,7 @@
                 </div>
             </form>
         </div>
+        <p th:if="${error != null}" style="margin-top: 10px; margin-bottom: 10px; padding: 10px; background-color: #f8d7da; border-color: #f5c6cb; color: #721c24;" th:text="${error}"></p>
 
         <div th:if="${mostrarModalPuntos}" class="modal show" id="modalPuntos" tabindex="-1" role="dialog" aria-labelledby="modalPuntosLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
@@ -127,6 +128,7 @@
                 <p><img th:src="@{'/img/miel.unlam.edu.ar.ico'}" alt="Logo Miel" width="26" height="26" style="margin-right: 5px;">https://miel.unlam.edu.ar</p>
             </div>
         </div>
+
     </div>
     <p class="mt-3" style="justify-content: center">&copy; UnlamApuntes V2.1.0. Todos los derechos reservados.</p>
 </footer>
