--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfilUsuario.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfilUsuario.html
@@ -29,6 +29,7 @@
                 </div>
             </div>
         </div>
+        <p th:if="${error != null}" style="margin-top: 10px; margin-bottom: 10px; padding: 10px; background-color: #f8d7da; border-color: #f5c6cb; color: #721c24;" th:text="${error}"></p>
     </div>
     <div th:if="${mostrarModalPuntos}" class="modal show" id="modalPuntos" tabindex="-1" role="dialog" aria-labelledby="modalPuntosLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
