--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -51,19 +51,23 @@
 <template id="template-card">
     <div id="card-base-apunte">
         <div class="card card-home my-2">
-            <div class="card-body">
-                <h5 id="apunte-nombre" class="card-title"></h5>
+            <div class="card-body" style="display: flex; flex-direction: column;">
+                <div style="display: flex; justify-content: space-between; align-items: baseline;">
+                    <h5 id="apunte-nombre" class="card-title" style="margin-right: 50px;"></h5>
+                    <p class="d-inline-block card-apunte-promedio" style="margin-bottom: 0;">
+                        <i class="fa-solid fa-star" style="color: #e7e00d; margin-right: 5px; font-size: 1.5em;"></i>
+                        <span id="apunte-promedio"></span>
+                    </p>
+                </div>
                 <div class="apunte-descrip mb-2">
                     <p id="apunte-descripcion" class="mb-2"></p>
                 </div>
                 <a class="btn btn-unlam bg-verde-unlam btn-sm">Ver Detalle</a>
-                <p class="card-apunte-coins">
-                    <img alt="coins" style="height: 32px" th:src="@{/img/coin.png}"><span id="apunte-precio"></span>
-                </p>
-                <p class="d-inline-block card-apunte-promedio">
-                    <i class="fa-solid fa-star" style="color: #e7e00d; margin-right: 5px; font-size: 1.5em;"></i>
-                    <span id="apunte-promedio"></span>
-                </p>
+                <div style="display: flex; justify-content: space-between;">
+                    <p class="card-apunte-coins">
+                        <img alt="coins" style="height: 32px" th:src="@{/img/coin.png}"><span id="apunte-precio"></span>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
