--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfilUsuario.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfilUsuario.html
@@ -2,34 +2,35 @@
 <div th:insert="~{nav}"></div>
 <main>
 <body>
-    <div class="container">
-        <h2 style="margin-top: 20px;">Apuntes creados por <span th:text="${usuario.nombre}"></span></h2>
-        <div class="row">
-            <div th:each="apunte : ${apuntesCreados}" th:if="${apunte.activo}"  class="col-12 col-sm-6 col-md-4 col-xl-3">
-                <div class="card card-home my-2">
-                    <div class="card-body">
-                        <h5 th:text="${apunte.nombre}" class="card-title"></h5>
-                        <div class="apunte-descrip mb-2">
-                            <p  th:text="${apunte.descripcion}" class="mb-2"></p>
-                        </div>
-                        <div class="d-flex boton-apunte">
-                            <a class="btn bg-verde-unlam btn-sm" th:href="@{/detalleApunte/{id}(id=${apunte.id})}">Mas Info</a>
-                            <form th:action="@{/comprarApuntePorPerfil/{id}(id=${apunte.id})}" method="POST" style="margin-left: 4px;">
-                                <button id="botonComprar" 
-                                th:unless="${#lists.contains(apuntesCompradosPorUsuarioActual, apunte) or #lists.contains(apuntesCreadosPorUsuarioActual, apunte)}"
-                                type="submit" class="btn btn-success btn-sm" title="Comprar apunte"><i class="fa-solid fa-shopping-cart"></i></button>
-                            </form>
-                        </div>
-                        <p class="d-inline-block card-apunte-coins"><img alt="coins" style="height: 32px" th:src="@{/img/coin.png}"> <span th:text="${apunte.precio}"></span></p>
-                        <p class="d-inline-block card-apunte-promedio">
+<div class="container">
+    <h2 style="margin-top: 20px;">Apuntes creados por <span th:text="${usuario.nombre}"></span></h2>
+    <div class="row">
+        <div th:each="apunte : ${apuntesCreados}" th:if="${apunte.activo}" class="col-12 col-sm-6 col-md-4 col-xl-3">
+            <div class="card card-home my-2">
+                <div class="card-body">
+                    <div style="display: flex; justify-content: space-between; align-items: baseline;">
+                        <h5 th:text="${apunte.nombre}" class="card-title" style="margin-right: 45px;"></h5>
+                        <p class="d-inline-block card-apunte-promedio" style="margin-bottom: 0;">
                             <i class="fa-solid fa-star" style="color: #e7e00d; margin-right: 5px; font-size: 1.5em;"></i>
                             <span th:text="${apunte.promedioResenas}"></span>
                         </p>
-
                     </div>
+                    <div class="apunte-descrip mb-2">
+                        <p th:text="${apunte.descripcion}" class="mb-2"></p>
+                    </div>
+                    <div class="d-flex boton-apunte">
+                        <a class="btn bg-verde-unlam btn-sm" th:href="@{/detalleApunte/{id}(id=${apunte.id})}">Mas Info</a>
+                        <form th:action="@{/comprarApuntePorPerfil/{id}(id=${apunte.id})}" method="POST" style="margin-left: 4px;">
+                            <button id="botonComprar" th:unless="${#lists.contains(apuntesCompradosPorUsuarioActual, apunte) or #lists.contains(apuntesCreadosPorUsuarioActual, apunte)}"
+                                    type="submit" class="btn btn-success btn-sm" title="Comprar apunte"><i class="fa-solid fa-shopping-cart"></i></button>
+                        </form>
+                    </div>
+                    <p class="d-inline-block card-apunte-coins"><img alt="coins" style="height: 32px" th:src="@{/img/coin.png}"> <span th:text="${apunte.precio}"></span></p>
                 </div>
             </div>
         </div>
+    </div>
+</div>
         <p th:if="${error != null}" style="margin-top: 10px; margin-bottom: 10px; padding: 10px; background-color: #f8d7da; border-color: #f5c6cb; color: #721c24;" th:text="${error}"></p>
     </div>
     <div th:if="${mostrarModalPuntos}" class="modal show" id="modalPuntos" tabindex="-1" role="dialog" aria-labelledby="modalPuntosLabel" aria-hidden="true">
